# agentic-aiops

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  FEATURE_CHECK.md  README.md  README_EN.md  config.example.yaml  deploy.sh  docker-compose.yml  index.html  preview.html  pyproject.toml  requirements.txt  upload_pages.py
aiops/: __init__.py  cli.py
aiops/agents/: __init__.py  base.py  cloud_agent.py  cmdb_agent.py  copilot.py  cost_agent.py  docker_agent.py  incident_agent.py  middleware_agent.py  network_agent.py  planner.py  servicemesh_agent.py  sre_agent.py  virtual_agent.py  windows_agent.py
aiops/analyzers/: __init__.py  anomaly.py  correlation.py  root_cause.py
aiops/api/: __init__.py  server.py
aiops/approval/: __init__.py  base.py  manager.py
aiops/collectors/: __init__.py  base.py  docker.py  log_collector.py  network.py  process.py  service.py  system.py
aiops/mcp/: base.py  (+2 more)
assets/: AlertPage-Ba686Ail.js  AlertPage-GBnr6TAu.js  ApiDocsPage-Bj8yVUgK.js  ApiDocsPage-Dq2O8xxz.js  ApiDocsPage-Vn4XD2Kn.js  AuditLogPage-DRB3zYJk.js  AuditLogPage-WUasAXw2.js  BarChart-BvFZc8yE.js  BarChart-eMs_WHcN.js  CartesianChart-BCDeXUGr.js  CartesianChart-C77TbU-o.js  CartesianChart-DUtfm-W0.js  CategoricalChart-BJPGS24_.js  CategoricalChart-o3pDsM0k.js  CategoricalChart-ttRliXNA.js  CostPage-C1zLo_mj.js  DashboardPage-CW6FW1E9.js  DashboardPage-DU41Wc_2.js  DashboardPage-DinH2rdS.js  DataSourcePage-D9w1sRLm.js  DataSourcePage-Dl-FLJYM.js  DataSourcePage-Du30Qz61.js  DeploymentPage-BhOhmF97.js  DeploymentPage-DxnyYAIr.js  EnvironmentPage-BTarSb2c.js  EnvironmentPage-CPMR9ypq.js  EventsPage-B_Wr-M8k.js  EventsPage-Dxk0coGt.js  MonitoringPage-DxHG8JVx.js  MonitoringPage-Rq0fmdhp.js  PieChart-BUnHsNhd.js  PieChart-Cmex2dsC.js  PieChart-DLfam7b1.js  SLOPage-BX-fYoG3.js  SLOPage-D38gW6Zy.js  SecurityPage-lsY0WI9f.js  SecurityPage-oO1GJinp.js  SettingsPage-14S8Ggtl.js  SettingsPage-CXi5Rta9.js  Tooltip-B1MlNCZL.js  (+20 more)
dashboard/: package-lock.json  package.json  vite.config.ts
docs/: agents.md  api.md  approval.md  architecture.md  case-studies.md  faq.md  installation.md  knowledge.md  mcp.md  memory.md  security.md  workflow.md
plugins/: example_plugin.py
runbooks/: disk_full.md  high_cpu.md  memory_leak.md  service_down.md
scripts/: deploy-pages.sh  extract_pdf.py
tests/: test_analyzers.py  test_config.py
(+146 files in other folders)
