[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-aiops"
version = "3.1.0"
description = "AI Native 智能运维平台，让 AI 不仅能分析，还能真正完成运维工作"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Neal", email = "neal@example.com"}
]
requires-python = ">=3.9"
keywords = ["aiops", "devops", "sre", "kubernetes", "docker", "monitoring", "automation", "agent", "llm", "rag"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
]

dependencies = [
    "paramiko>=3.0.0",
    "pyyaml>=6.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "openai>=1.0.0",
    "requests>=2.28.0",
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.20.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "flake8>=6.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

[project.urls]
Homepage = "https://gitee.com/neal4752/agentic-aiops"
Repository = "https://gitee.com/neal4752/agentic-aiops"
Issues = "https://gitee.com/neal4752/agentic-aiops/issues"

[project.scripts]
aiops = "aiops.cli:main"

[tool.setuptools.packages.find]
include = ["aiops*"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"

[tool.coverage.run]
source = ["aiops"]
omit = ["tests/*", "aiops/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.",
    "raise NotImplementedError",
    "pass",
    "except Exception",
]
